--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -6,6 +6,7 @@ atk check for doubles
 make subscriptions start 20.04.2012
 
 == NEXT TOPICS ==
+check up on group fixtures
 problems with generate repetitions, check up on this
 reset users password when administrator
 add password when creating user as admin
