--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,15 +1,15 @@
 == NIBE ==
 create memberships to all
+drop migration_version table && create new table, with insert
 
 == ATK ==
 atk check for doubles
 make subscriptions start 20.04.2012
+drop migration_version table && create new table, with insert
 
 == NEXT TOPICS ==
 problems with generate repetitions, check up on this
 improve documentation of config file
-improve documentation of overwrite mail template files
-improve documentation of overwrite pages in general
 
 == NOTES TO LATER ==
 use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
