--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,6 +2,8 @@
 create memberships to all
 
 == NEXT FIXES ==
+search orders
+change price on product on new orders
 search on email
 search on phone
 use order status priority
