--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,8 +1,7 @@
-== NIBE ==
+= NIBE ==
 create memberships to all
 
 == NEXT FIXES ==
-search orders
 change price on product on new orders
 search on email
 search on phone
