--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,6 +2,7 @@
 create memberships to all
 
 == NEXT FIXES ==
+support multiple subscriptions at once
 search on email
 search on phone
 use order status priority
