--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,12 @@
 = NIBE ==
 create memberships to all
 
+== ATK ==
+correct text on ATK about right and left side with login box
+
+== FIXME ==
+improve text on change location to something more meaning full, especially on booking page its miss leaing
+
 == NOTES TO LATER ==
 improve form design with bootstrap:
   - date
