Fixed checkin on login.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -6,6 +6,7 @@ correct text on ATK about right and left side with login box
 
 == FIXME ==
 improve text on change location to something more meaning full, especially on booking page its miss leaing
+upload logo
 
 == NOTES TO LATER ==
 improve form design with bootstrap:
