--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -5,10 +5,11 @@ create memberships to all
 correct text on ATK about right and left side with login box
 
 == FIXME ==
-improve text on change location to something more meaning full, especially on booking page its miss leaing
-upload logo
+improve text on change location to something more meaning full, especially on booking page its miss leaing, and remove area without fields
+load users from csv file
 
 == NOTES TO LATER ==
+upload logo
 improve form design with bootstrap:
   - date
   - datetime
