--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,3 @@
-= NIBE ==
-create memberships to all
-
 == TOUCH ==
 better dialog
 book with guest
@@ -17,6 +14,7 @@ improve text on change location to something more meaning full, especially on bo
 load users from csv file
 
 == NOTES TO LATER ==
+booking plan, it should be possible to plan a booking plan a week on the same page
 payment has to be the same value, orders price in kr, purchase_log in øre
 upload logo
 improve form design with bootstrap:
