--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -19,6 +19,7 @@ keyboard animation when pressing the password
 buttons to navigate back and forth in time
 
 == FIXME ==
+make dynamic link on CLUB logo
 excel friendly csv format
 view member number and password in box to the left
 improve text on change location to something more meaning full, especially on booking page its miss leaing, and remove area without fields
