--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -6,6 +6,7 @@ change subscription to never expire
 
 == TOUCH ==
 when a user has been auto logged out, we can still cancel the reservation :/
+seems like you can perform a booking when you are not authenticated, any bad defaults?
 type member number in box with username on kiosk pc
 something weird happended on the booking screen, logged out while working on a booking
 turn booking screen around
@@ -14,16 +15,15 @@ keyboard animation when pressing the password
 buttons to navigate back and forth in time
 
 == FIXME ==
+add notification option for users, receive email on booking
+groups does not work (check nibe)
+only book 7 days in the future
+make a filter so users can disable sharing his booking activities
 auto confirm booking if booked within confirm interval
 make dynamic link on CLUB logo
 excel friendly csv format
 improve text on change location to something more meaning full, especially on booking page its miss leaing, and remove area without fields
 load users from csv file
-seems like you can perform a booking when you are not authenticated, API
-add notification option for users, receive email on booking
-groups does not work (check nibe)
-only book 7 days in the future
-make a filter so users can disable sharing his booking activities
 
 == NOTES TO LATER ==
 remove dynamic filters, only work on a single filter
