--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,8 +3,8 @@ fix logo
 change subscription to never expire
 
 == FIXME ==
+fix issue with edit tasks
 add notification option for users, receive email on booking
-groups does not work (check nibe)
 make a filter so users can disable sharing his booking activities
 auto confirm booking if booked within confirm interval
 excel friendly csv format
