--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2342,6 +2342,10 @@
         <source>Reset user</source>
         <target>Nulstil bruger</target>
       </trans-unit>
+      <trans-unit id="590">
+        <source>User has not attended any teams.</source>
+        <target>Medlemmet har ikke tiltaget i nogen hold.</target>
+      </trans-unit>
 
     </body>
   </file>
